# your_friend

./: .env.example  .gitignore  LICENSE  README.md  compose.yml  pyproject.toml
app/: Dockerfile  main.py  pyproject.toml
app/core/: ai_chat.py  config.py  database.py  history.py  oauth2.py  utils.py
app/models/: models.py
app/personas/: alice.json  ethan.json  mira.json  nova.json  robert.json  sora.json
app/routers/: ai.py  auth.py  personas.py  user.py
app/schemas/: persona_schemas.py  query_schemas.py  token_schemas.py  user_schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.jsx  index.css  main.jsx
frontend/src/components/: ChatHeader.jsx  ChatInputBox.jsx  ChatMessages.jsx  ChatSidebar.jsx  CustomPersonaManager.jsx  Footer.jsx  Header.jsx  HeroSection.jsx
frontend/src/context/: Auth.jsx
frontend/src/data/: personas.json
frontend/src/modals/: BaseModal.jsx  CreateFriendModal.jsx  Login.jsx  PersonaModal.jsx  SignUp.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/routes/: ProtectedRoute.jsx
frontend/src/services/: personaService.js
